--- a/config-templates/development.ini
+++ b/config-templates/development.ini
@@ -16,8 +16,7 @@ jinja2.filters =
     admin_jsonify = gecoscc.filters.admin_serialize
 
 mongo_uri = mongodb://localhost:27017/gecoscc
-redis_uri = redis://localhost:6379/4
-#redis_uri = redis://:password@localhost:6379/4
+
 
 # Pyramid - Beaker sessions configuration
 # See: http://beaker.readthedocs.io/en/latest/configuration.html#session-options
@@ -43,35 +42,17 @@ chef.seconds_block_is_busy = 3600
 
 # smart_lock_sleep_factor is use to avoid concurrency problem
 # We use this parameter to sleep the process between GET and POST request.
-# It's a temporary solution
+# Its a temporary solution
 chef.smart_lock_sleep_factor = 3
 # ssl_verify is used to avoid urllib3 ssl certificate validation
 chef.ssl.verify = False
 
-## Change this if you dont want to use mongo
-## BROKER_URL = mongodb://localhost:27017/gecoscc
-## CELERY_RESULT_BACKEND = mongodb
-## CELERY_MONGODB_BACKEND_SETTINGS =
-##     {
-##     "host": "localhost",
-##     "port": 27017,
-##     "database": "gecoscc",
-##     "taskmeta_collection": "celery_taskmeta",
-##     }
 
-## Change this if you want to use redis
-#BROKER_URL = redis://localhost:6379/4
-#CELERY_RESULT_BACKEND = "redis"
-#CELERY_REDIS_HOST = "localhost"
-#CELERY_REDIS_PORT = 6379
-#CELERY_REDIS_DB = 4
-#CELERY_REDIS_PASSWORD = "password"
+# CELERY (using redis backend) 
+celery_broker_url = redis://localhost:6379/4
 
-redis.conf =
-    {"host": "localhost",
-     "port": 6379
-#     "password": "password"
-    }
+# SOCKETS (using redis backend)
+sockjs = redis://localhost:6379/0
 
 firstboot_api.version = 0.2.0
 firstboot_api.organization_name = Organization name
